# pico-bt-audio-receiver

./: .gitignore  CMakeLists.txt  README.md  btstack_config.h  pico_sdk_import.cmake
src/: audio_i2s.pio  bt_audio_sink.c  bt_audio_sink.h  i2s_audio.c  i2s_audio.h  main.c
